--- a/index.html
+++ b/index.html
@@ -4,12 +4,14 @@
     <!-- Meta information for the page -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lyrics Page</title>
+    <title>DYLHITM - NIKI</title>
 
     <!-- Importing Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+
+    <link rel="icon" href="niki.jpg" type="image/x-jpg">
 
     <!-- Internal CSS for styling -->
     <style>
